# license-expression

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  appveyor.yml  azure-pipelines.yml  configure  configure.bat  license-expression.ABOUT  package.json  setup-pyenv.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: docs-ci.yml  pypi-release.yml
docs/source/: conf.py  index.rst
docs/source/api/: license_expression.rst  modules.rst
etc/: configure.py
etc/ci/: azure-all.yml  azure-container-deb.yml  azure-container-manylinux.yml  azure-container-rpm.yml  azure-container.yml  azure-posix.yml  azure-win.yml  install_sudo.sh
etc/conf/dev/: base.txt
etc/conf/dev/transpile/: base.txt
etc/scripts/: irc-notify.py.ABOUT  utils_thirdparty.py
src/: license_expression.py
src/license_expression/: __init__.py  _pyahocorasick.ABOUT  _pyahocorasick.py  my_collections.py
src/license_expression.js/: index.html
src/license_expression/data/: license_key_index.json.ABOUT  scancode-licensedb-index.json
test.js/: dummy_test.js  test_license_expression.js
tests/: test__pyahocorasick.py  test__pyahocorasick_issue_21.py  test_license_expression.py
tests.js/: test_license_expression.js
tests/data/: test_license_key_index.json
transpile/: transpile.py
