[bdist_wheel]
universal = 1

[metadata]
license_file = NOTICE

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel register upload

[tool:pytest]
norecursedirs =
    .git
    bin
    build
    _build
    dist
    local
    ci
    docs
    etc
    Include
    include
    Lib
    lib
    lib64
    Scripts
    thirdparty
    tmp
    src/*/data
    tests/*/data

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules
    --doctest-glob=README.rst