[metadata]
name = license-expression
version = 30.3.0
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = license-expression is a comprehensive utility library to parse, compare, simplify and normalize license expressions (such as SPDX license expressions) using boolean logic.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/license-expression

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords = 
    open source
    license expression
    license
    spdx
    boolean
    parse expression
    normalize expression
    compare expression
    licence

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.8

install_requires =
    boolean.py >= 4.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    # do not use this as this triggers a bug
    # in setuptools_scm:aboutcode-toolkit >= 6.0.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-apidoc >= 0.4.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

